Added radio buttons for midi mode to midi ports popup

--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -717,7 +717,7 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
     text-align:right;
 }
 
-.save-popup label {
+.save-popup:not(#midi-ports-window) label {
     display:inline-block;
     float:left;
     line-height:2;
