Disable feature for initial release and some code cleanup

--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -10,7 +10,7 @@
                     <select class="form-control" name="actuator"></select>
                 </div>
             </div>
-            <div class="tempo form-group clearfix">
+            <div class="tempo form-group clearfix mod-hidden"> <!-- Disabled for 1.7 initial release -->
               <label>Tempo</label>
               <div>
                 <input type="checkbox" name="tempo"> Translate value to musical tempo
