--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -4,12 +4,6 @@
         <div class="clearfix"></div>
         <hr style="margin-top:0px" />
         <form class="bottom form">
-            <div class="mod form-group clearfix">
-                <label>Actuator</label>
-                <div class="mod-controls">
-                    <select class="form-control" name="actuator"></select>
-                </div>
-            </div>
             <div class="tempo form-group clearfix mod-hidden"> <!-- Disabled for 1.7 initial release -->
               <label>Tempo</label>
               <div>
@@ -21,7 +15,24 @@
                 </select>
               </div>
             </div>
-            <span class="midi-learn-hint" style="display: none;">To continue click "save" then move any controller in your MIDI device</span>
+
+            <div class="mod form-group clearfix">
+                <label>Assign to</label>
+                <select name="type">
+                   <option>None</option>
+                   <option>Device</option>
+                   <option>MIDI</option>
+                   <option>Control Chain</option>
+                </select>
+                <input type="hidden" name="type">
+            </div>
+            <div class="dynamic-field device-table form-group clearfix" style="display: none;">TABLE here</div>
+            <span class="dynamic-field midi-learn-hint" style="display: none;">To continue click "save" then move any controller in your MIDI device</span>
+            <div class="dynamic-field cc-select form-group clearfix" style="display: none;">
+              <div class="mod-controls">
+                  <select class="form-control" name="cc-actuator"></select>
+              </div>
+            </div>
             <label class="label-toggle" for="toggle-address"><a>Extended</a></label>
             <div>
                 <br /><br />
