--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -26,11 +26,14 @@
                 </select>
                 <input type="hidden" name="type">
             </div>
-            <div class="dynamic-field device-table form-group clearfix" style="display: none;">TABLE here</div>
+            <div class="dynamic-field device-table form-group clearfix" style="display: none;">
+              <input type="hidden" name="hmi-page" type="number">
+              <input type="hidden" name="hmi-uri">
+            </div>
             <span class="dynamic-field midi-learn-hint" style="display: none;">To continue click "save" then move any controller in your MIDI device</span>
             <div class="dynamic-field cc-select form-group clearfix" style="display: none;">
               <div class="mod-controls">
-                  <select class="form-control" name="cc-actuator"></select>
+                  <select class="form-control" name="actuator"></select>
               </div>
             </div>
             <label class="label-toggle" for="toggle-address"><a>Extended</a></label>
