Build device table without page

--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -14,7 +14,7 @@
     .hmi-table {
       cursor: pointer;
 
-      th {
+      td {
         &.selected {
           background-color: @brand-primary;
           color: white;
@@ -24,7 +24,7 @@
           cursor: auto;
           color: @gray-light;
         }
-        
+
       }
     }
   }
