--- a/html/css/less/variables.less
+++ b/html/css/less/variables.less
@@ -8,6 +8,7 @@
 @gray-dark:              lighten(#000, 20%);   // #333
 @gray:                   lighten(#000, 33.5%); // #555
 @gray-light:             lighten(#000, 60%);   // #999
+@gray-mid-light:         lighten(#000, 85%);   // #999
 @gray-lighter:           lighten(#000, 93.5%); // #eee
 
 @brand-primary:         #883996;
@@ -823,3 +824,8 @@
 
 //** Horizontal offset for forms and lists.
 @component-offset-horizontal: 180px;
+
+// Pages background colors
+@red: lighten(#ff0000, 20%);
+@yellow: lighten(#ffff00, 20%);
+@cyan: lighten(#00ffff, 20%);
