--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -43,7 +43,7 @@
                     please make sure that the cable is firmly seated and connected to the "MAIN" port on the Control Chain device.
                   </span>
                   <div class="dynamic-field cc-select form-group clearfix" style="display: none;">
-                    <div class="mod-controls">
+                    <div class="mod-controls" style="width: 100%">
                         <select class="form-control" name="cc-actuator"></select>
                     </div>
                   </div>
