Tweak logic of new address logic for CC, and a little of its CSS
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -13,6 +13,10 @@
         width: 416px;
         padding-right: 25px;
 
+        label {
+          text-align: center;
+        }
+
         .btn.js-type {
 
           &.selected {
@@ -22,6 +26,7 @@
         }
 
         .hmi-table {
+          width: 100%;
 
           th:first-child {
             background-color: @red;
