--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -42,6 +42,10 @@
                     No Control Chain device detected,
                     please make sure that the cable is firmly seated and connected to the "MAIN" port on the Control Chain device.
                   </span>
+                  <span class="dynamic-field cc-in-use" style="display: none;">
+                    No Control Chain actuators available,
+                    either your Control Chain devices cannot handle this control or all their actuators are already in use.
+                  </span>
                   <div class="dynamic-field cc-select form-group clearfix" style="display: none;">
                     <div class="mod-controls" style="width: 100%">
                         <select class="form-control" name="cc-actuator"></select>
