--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -19,14 +19,14 @@
                     </div>
                   </div>
                   <div class="mod form-group clearfix">
-                      <label>Assign to</label>
-                      <select name="type">
-                         <option>None</option>
-                         <option>Device</option>
-                         <option>MIDI</option>
-                         <option>Control Chain</option>
-                      </select>
-                      <input type="hidden" name="type">
+                    <label>Assign to</label>
+                    <select name="type">
+                        <option>None</option>
+                        <option>Device</option>
+                        <option>MIDI</option>
+                        <option>Control Chain</option>
+                    </select>
+                    <input type="hidden" name="type">
                   </div>
                   <div class="dynamic-field device-table form-group clearfix" style="display: none;">
                     <input type="hidden" name="hmi-page" type="number">
@@ -41,6 +41,10 @@
                   <span class="dynamic-field no-cc" style="display: none;">
                     No Control Chain device detected,
                     please make sure that the cable is firmly seated and connected to the "MAIN" port on the Control Chain device.
+                  </span>
+                  <span class="dynamic-field cc-in-use" style="display: none;">
+                    No Control Chain actuators available,
+                    either your Control Chain devices cannot handle this control or all their actuators are already in use.
                   </span>
                   <div class="dynamic-field cc-select form-group clearfix" style="display: none;">
                     <div class="mod-controls" style="width: 100%">
