Add backwards-compatible fields to form-container class
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -3,6 +3,9 @@
   .mod-box {
 
     .form-container {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
       display: flex;
 
       .btn.js-type, .btn.advanced-toggle {
