--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -1,3 +1,10 @@
+.mod-pedal-settings {
+
+  .mod-address.addressed, .preset-btn-assign-all.addressed {
+    background-color: lighten(@brand-primary, 7.5%);
+  }
+}
+
 .mod-pedal-settings-address {
 
   .mod-box {
