Do not uppercase GHz CPU suffix
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -409,6 +409,7 @@ hr.dotted {
   #mod-cpu-stats {
     background-image: url(../img/icons/25/cpu.png);
     width: 155px !important;
+    text-transform: none;
   }
   #mod-buffersize {
     background-image: url(../img/icons/25/cpu.png);
