Fixup css a bit for the addressing dialog

--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -21,7 +21,7 @@
 
       .main-form-container {
         width: 416px;
-        padding-right: 25px;
+        padding-right: 3px;
 
         label {
           text-align: center;
@@ -80,12 +80,13 @@
       }
 
       .buttons-container {
-        padding-right: 25px;
+        padding-right: 3px;
       }
 
       .advanced-container {
         border-left: 1px solid @gray-lighter;
-        padding-left: 25px;
+        padding-left: 12px;
+        margin-left: 12px;
       }
     }
   }
