--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -52,7 +52,7 @@
                     </div>
                   </div>
                 </div>
-                <hr class="col-xs-12" style="padding:0" />
+                <hr class="col-xs-12" style="padding:0;margin:0 0 10px;" />
                 <div class="buttons-container textright clearfix">
                     <span class="btn btn-danger js-close">Cancel</span>
                     <span class="btn btn-success js-save">Save</span>
