Re-enable tempo divider feature

--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -7,13 +7,12 @@
             <div class="form-container">
               <div>
                 <div class="main-form-container">
-                  <div class="tempo form-group clearfix mod-hidden"> <!-- Disabled for 1.7 initial release -->
+                  <div class="tempo form-group clearfix">
                     <label>Tempo</label>
                     <div>
                       <input type="checkbox" name="tempo"> Translate value to musical tempo
                     </div>
                     <div>
-                      <span>Note value:</span>
                       <select class="form-control" name="divider">
                       </select>
                     </div>
