make plugin url a link

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -23,7 +23,7 @@
                         {{/demo}}
                         <br/>
                         <p>
-                            <b>URI:</b> {{uri}}<br/>
+                            <b>URI:</b> <a href="{{uri}}" target="_blank">{{uri}}</a><br/>
                             <b>Category:</b> {{category}}<br/>
                         </p>
                         <p>
