[DX-393] Make the addressing modal in MOD UI scrollable when needed

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -682,6 +682,8 @@ body > .mod-settings.mod-window-visible {
     position:absolute;
     top:40%;
     width:450px;
+    max-height: 450px;
+    overflow: auto;
 }
 
 .mod-pedal-settings-address h1 {
