Use relative max-height for addressing window

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -682,7 +682,7 @@ body > .mod-settings.mod-window-visible {
     position:absolute;
     top:40%;
     width:450px;
-    max-height: 450px;
+    max-height: 70%;
     overflow: auto;
 }
 
