[DX-393] Only support vertical scroll in addressing window

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -683,7 +683,7 @@ body > .mod-settings.mod-window-visible {
     top:40%;
     width:450px;
     max-height: 70%;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 .mod-pedal-settings-address h1 {
