--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -142,8 +142,8 @@
       .make-md-column(6);
       .make-lg-column(4);
       height: 120px;
-      margin-top: 10px;
-      margin-bottom: 60px;
+      border: 5px solid #000;
+      padding: 0 !important;
       background: rgba(255, 255, 255, 0.07);
       transition: all 0.33s;
       cursor: pointer;
@@ -156,11 +156,7 @@
           }
         }
         figure {
-          width: calc(~'100% - 20px');
-          height: 170px;
-          top: -25px;
-          left: 10px;
-          background-position: 0% 50%;
+          top: -5px;
         }
         div.demo-plugin {
           opacity: 0;
@@ -201,9 +197,9 @@
         position: absolute;
         top: 10px;
         left: 20px;
-        width: 100px;
-        background-size: contain;
-        background-position: 50% 50%;
+        width: calc(~'100% - 20px');
+        background-size: auto;
+        background-position: 0% 50%;
         background-repeat: no-repeat;
         margin: 0;
         transition: all 0.33s linear;
@@ -214,6 +210,11 @@
       span.price-container {
         transition: all 0.33s linear;
       }
+      .cloud-plugin-border {
+        border: 1px solid #333;
+        width: 100%;
+        height: 100%;
+      }
       .description {
         .no_description {
           color: rgba(255, 255, 255, 0.25);
@@ -223,10 +224,10 @@
         line-height: 1.5;
         overflow: hidden;
         position:absolute;
-        top: 0px;
-        right: 0px;
-        bottom: 0px;
-        left: 120px;
+        top: 1px;
+        right: 1px;
+        bottom: 1px;
+        left: 80px;
         background: rgba(33, 33, 33, 0.66);
         hr {
           transition: all 0.33s;
@@ -236,7 +237,7 @@
           position: absolute;
           top: 50%;
           left: 0;
-          width: 100%;
+          width: calc(~'100% - 5px');
         }
         .title {
           display: block;
