--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -61,6 +61,7 @@
     overflow: auto;
     background: #111 url(../img/watermark.png) 100% 100% no-repeat;
     padding-top: 1%;
+
     .pedalboard {
       color: #fff;
       float: left;
@@ -74,6 +75,7 @@
       background-size: auto 100%;
       transition: all 0.33s;
       cursor: pointer;
+
       &:hover {
         .info {
           background-color: @brand-primary;
@@ -162,6 +164,15 @@
         &.duplicate {
           margin: 0 6px;
         }
+      }
+    }
+
+    &.list-selected {
+      .pedalboard {
+        width: 100%;
+      }
+      .img {
+        display: none;
       }
     }
   }
