[DX-393] Hide x overflow in addressing popup

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -684,6 +684,7 @@ body > .mod-settings.mod-window-visible {
     width:450px;
     max-height: 70%;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .mod-pedal-settings-address h1 {
