Show "..." for pedalboard names that do not fit in the title space

--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -143,6 +143,9 @@
         position: relative;
         height: 32px;
         left: 5px;
+        width: calc(~'100% - 32px');
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
       .description {
         display: block;
