[DX-459] Fix bottom padding in addressing dialog with scrollbar on firefox

--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -104,6 +104,7 @@
 
       .buttons-container {
         padding-right: 3px;
+        padding-bottom: 18px;
       }
 
       .advanced-container {
