--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -1150,6 +1150,12 @@ header#pedalboard-actions {
       }
       td {
         border-color: #333;
+        &:first-child {
+          width: 40%;
+        }
+        &:not(first-child) {
+          width: 20%;
+        }
       }
     }
     .comments-reviews {
