--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -74,7 +74,7 @@
                         <p><strong>CV INPUTS:</strong></p>
                         <table class="plugin-specs table table-bordered">
                         <tr>
-                            <th>Control</th>
+                            <th>Port</th>
                             <th>Default</th>
                             <th>Min</th>
                             <th>Max</th>
@@ -93,7 +93,7 @@
                         <p><strong>CV OUTPUTS:</strong></p>
                         <table class="plugin-specs table table-bordered">
                         <tr>
-                            <th>Control</th>
+                            <th>Port</th>
                             <th>Default</th>
                             <th>Min</th>
                             <th>Max</th>
