--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -16,8 +16,12 @@
                  5px 20px 50px rgba(0,0,0,0.9),
                  4px 12px 30px rgba(0,0,0,0.5);
 }
-.mod-input .mod-output-jack{
+.mod-input .mod-output-jack {
     z-index: 100;
+}
+
+.mod-input.input-connected.expanded {
+  z-index: 101;
 }
 
 /* = ACTIONS - Icons above: settings, remove, etc
@@ -117,12 +121,12 @@
 /* = INPUT
 ================================================ */
 .mod-pedal-input-wrapper {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.5);
     height:100px;
     position:relative;
     z-index:35;
     padding: 0 10px;
-    border-radius:10px;
+    border-radius:20px;
 }
 
 .mod-pedal .mod-pedal-input {
