Add CV tab to addressing window

--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -25,6 +25,7 @@
                         <option>Device</option>
                         <option>MIDI</option>
                         <option>Control Chain</option>
+                        <option>CV</option>
                     </select>
                     <input type="hidden" name="type">
                   </div>
@@ -49,6 +50,11 @@
                   <div class="dynamic-field cc-select form-group clearfix" style="display: none;">
                     <div class="mod-controls" style="width: 100%">
                         <select class="form-control" name="cc-actuator"></select>
+                    </div>
+                  </div>
+                  <div class="dynamic-field cv-select form-group clearfix" style="display: none;">
+                    <div class="mod-controls" style="width: 100%">
+                        <select class="form-control" name="cv-port"></select>
                     </div>
                   </div>
                 </div>
