--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -115,3 +115,26 @@
     }
   }
 }
+
+.mod-cv-output {
+
+  .output-cv-checkbox {
+    display: flex;
+    position: absolute;
+    top: 45px;
+    left: 15px;
+
+    input[type=checkbox] {
+      margin: 5px;
+    }
+
+    input[type=text] {
+      font-size: 20px;
+    }
+
+    ::selection {
+      background: @brand-primary !important;
+      color: white !important;
+    }
+  }
+}
