--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -617,6 +617,11 @@ header#pedalboard-actions,
             background-color: @brand-primary;
         }
     }
+    &.js-cv-addressing {
+        &:hover, &.selected {
+            background-color: @brand-primary;
+        }
+    }
     &.js-cloud {
       background-image: url(../img/icn-share.png);
       background-size: 32px;
