Add new cv icon next to Manage CV Ports button

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -618,6 +618,7 @@ header#pedalboard-actions,
         }
     }
     &.js-cv-addressing {
+        background-image: url(../img/icons/25/cv.png);
         &:hover, &.selected {
             background-color: @brand-primary;
         }
