--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -76,6 +76,16 @@
                           <input class="form-control" name="label" type="text"/>
                       </div>
                   </div>
+                  <div class="cv-op-mode form-group clearfix">
+                      <label>Operational mode</label>
+                      <div class="mod-controls mod-range">
+                          <select class="form-control" name="cv-op-mode">
+                            <option value="-1">unipolar -</option>
+                            <option value="0">bipolar</option>
+                            <option value="1">unipolar +</option>
+                          </select>
+                      </div>
+                  </div>
               </div>
             </div>
         </form>
