--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -89,6 +89,16 @@
                           <select class="form-control" name="steps"></select>
                       </div>
                   </div>
+                  <div class="cv-op-mode form-group clearfix">
+                      <label>Operational mode</label>
+                      <div class="mod-controls mod-range">
+                          <select class="form-control" name="cv-op-mode">
+                            <option value="-1">unipolar -</option>
+                            <option value="0">bipolar</option>
+                            <option value="1">unipolar +</option>
+                          </select>
+                      </div>
+                  </div>
               </div>
             </div>
         </form>
