--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -80,9 +80,9 @@
                       <label>Operational mode</label>
                       <div class="mod-controls mod-range">
                           <select class="form-control" name="cv-op-mode">
-                            <option value="-1">unipolar -</option>
-                            <option value="0">bipolar</option>
-                            <option value="1">unipolar +</option>
+                            <option value="-">unipolar -</option>
+                            <option value="b">bipolar</option>
+                            <option value="+">unipolar +</option>
                           </select>
                       </div>
                   </div>
