Update text for CV addressings
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -93,9 +93,9 @@
                       <label>Operational mode</label>
                       <div class="mod-controls mod-range">
                           <select class="form-control" name="cv-op-mode">
-                            <option value="-">unipolar -</option>
-                            <option value="b">bipolar</option>
-                            <option value="+">unipolar +</option>
+                            <option value="-">- Unipolar (-10 to 0)</option>
+                            <option value="b">Bipolar</option>
+                            <option value="+">+ Unipolar (0 to +10)</option>
                           </select>
                       </div>
                   </div>
