--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -94,7 +94,7 @@
                       <div class="mod-controls mod-range">
                           <select class="form-control" name="cv-op-mode">
                             <option value="-">- Unipolar (-10 to 0)</option>
-                            <option value="b">Bipolar</option>
+                            <option value="b">Bipolar (-5 to +5)</option>
                             <option value="+">+ Unipolar (0 to +10)</option>
                           </select>
                       </div>
