Listing IR files
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -410,7 +410,8 @@ body > .mod-settings.mod-window-visible {
     width:160px;
 }
 
-.mod-presets {
+.mod-presets,
+.mod-file-list {
     width: 320px !important;
 }
 .radio-preset {
