[DX-449] Show buildEnvironment in plugins info on plugins store

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -473,11 +473,31 @@
       content: "new version";
     }
   }
-  .status.unstable {
+  .status.buildEnvironment {
     border: 1px solid #FF2927;
     background-color: #FF2927;
+
     &:after {
-      content: "beta";
+      content: "local";
+    }
+
+    &.labs {
+      &:after {
+        content: "labs";
+      }
+    }
+
+    &.dev {
+      &:after {
+        content: "dev";
+      }
+    }
+
+    &.prod {
+      display: none;
+      &:after {
+        content: "";
+      }
     }
   }
   .status.demo {
