[DX-449] Show buildEnvironment in plugins info on plugins store
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -15,6 +15,7 @@
             {{#status}}
             <span class="status {{status}}"></span>
             {{/status}}
+            <span class="status buildEnvironment {{buildEnvironment}}"></span>
             {{^stable}}
             <span class="status unstable"></span>
             {{/stable}}
