--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -599,11 +599,31 @@
 	  width: 135px;
   }
 
-  .status.unstable {
+  .status.buildEnvironment {
     border: 1px solid #FF2927;
     background-color: #FF2927;
+
     &:after {
-      content: "beta";
+      content: "local";
+    }
+
+    &.labs {
+      &:after {
+        content: "labs";
+      }
+    }
+
+    &.dev {
+      &:after {
+        content: "dev";
+      }
+    }
+
+    &.prod {
+      display: none;
+      &:after {
+        content: "";
+      }
     }
   }
   .demo {
